--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="menu_tree">
         <ul><li class="active"><a href="index.html">首页</a></li></ul>
         </div>
-        <a href="https://github.com/zhuchaoyang/zhuchaoyang.github.io">idoc</a>
+        <a href="https://github.com/zhuchaoyang/my-documents">idoc</a>
 
         <div class="forkgithub"><a target="_blank" href="https://github.com/zhuchaoyang">fork on github</a></div>
 
