--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <link rel="stylesheet" href="./assets/fonts/iconfont.css">
   <title>Document</title>
   <script src="./plugins/browserdetect.js"></script>
+  <script src="/plugins/browserdetect.js" type="text/javascript"></script>
+  <script src="browserdetect.js" type="text/javascript"></script>
   <!-- <script src="./plugins/jquery.min.js"></script> -->
 <link href="main.css" rel="stylesheet"></head>
 <body>
