--- a/index.html
+++ b/index.html
@@ -6,12 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="shortcut icon" href="./assets/favicon.ico"/>
   <link rel="stylesheet" href="./assets/fonts/iconfont.css">
+  <link href="main.css" rel="stylesheet"></head>
   <title>Document</title>
   <script src="./plugins/browserdetect.js"></script>
-  <script src="/plugins/browserdetect.js" type="text/javascript"></script>
-  <script src="browserdetect.js" type="text/javascript"></script>
   <!-- <script src="./plugins/jquery.min.js"></script> -->
-<link href="main.css" rel="stylesheet"></head>
 <body>
   <div id="app">
     <p style="color: #00aeef;font-size: 30px;margin: 200px auto;text-align: center;">Loading...</p>
@@ -24,5 +22,8 @@
     }
 
   </script>
-<script type="text/javascript" src="common.3d429eb8.js"></script><script type="text/javascript" src="main.3d429eb8.js"></script><script type="text/javascript" src="vendor.3d429eb8.js"></script></body>
+  <script type="text/javascript" src="common.3d429eb8.js"></script>
+  <script type="text/javascript" src="main.3d429eb8.js"></script>
+  <script type="text/javascript" src="vendor.3d429eb8.js"></script>
+</body>
 </html>
