--- a/index.html
+++ b/index.html
@@ -2,14 +2,17 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="shortcut icon" href="./assets/favicon.ico"/>
   <link rel="stylesheet" href="./assets/fonts/iconfont.css">
-  <title>我的简历</title>
+  <!-- <link rel="stylesheet" href="./assets/styles/base.css"> -->
+  <title>上梁山</title>
   <script src="./plugins/browserdetect.js" type="text/javascript"></script>
-  <!-- <script src="./plugins/jquery.min.js"></script> -->
-<link href="main.css" rel="stylesheet"></head>
+  <script src="./plugins/jquery.min.js"></script>
+
+<link href="main.6e8244b2.css" rel="stylesheet"></head>
 <body>
   <div id="app">
     <p style="color: #00aeef;font-size: 30px;margin: 200px auto;text-align: center;">Loading...</p>
@@ -22,5 +25,5 @@
     }
 
   </script>
-<script type="text/javascript" src="common.2f96aec5.js"></script><script type="text/javascript" src="main.2f96aec5.js"></script><script type="text/javascript" src="vendor.2f96aec5.js"></script></body>
+<script type="text/javascript" src="manifest.d33b35ff.js"></script><script type="text/javascript" src="vendors.452a5adb.js"></script><script type="text/javascript" src="main.8fc428f0.js"></script></body>
 </html>
