--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="shortcut icon" href="./assets/favicon.ico"/>
   <link rel="stylesheet" href="./assets/fonts/iconfont.css">
+  <!-- <link rel="stylesheet" href="./plugins/wangEditor.min.css"> -->
   <!-- <link rel="stylesheet" href="./assets/styles/base.css"> -->
   <title>上梁山</title>
   <script src="./plugins/browserdetect.js" type="text/javascript"></script>
   <script src="./plugins/jquery.min.js"></script>
 
-<link href="main.e8a277b6.css" rel="stylesheet"></head>
+<link href="main.85789141.css" rel="stylesheet"></head>
 <body>
   <div id="app">
     <p style="color: #00aeef;font-size: 30px;margin: 200px auto;text-align: center;">Loading...</p>
@@ -25,5 +26,5 @@
     }
 
   </script>
-<script type="text/javascript" src="manifest.6eb1b68f.js"></script><script type="text/javascript" src="vendors.452a5adb.js"></script><script type="text/javascript" src="main.353c2894.js"></script></body>
+<script type="text/javascript" src="manifest.85b32658.js"></script><script type="text/javascript" src="vendors.42ff160c.js"></script><script type="text/javascript" src="main.5ac1d8c1.js"></script></body>
 </html>
