--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="shortcut icon" href="./assets/favicon.ico"/>
   <link rel="stylesheet" href="./assets/fonts/iconfont.css">
+  <link rel="stylesheet" href="./plugins/fontawesome/css/font-awesome.min.css">
   <!-- <link rel="stylesheet" href="./plugins/wangEditor.min.css"> -->
   <!-- <link rel="stylesheet" href="./assets/styles/base.css"> -->
   <title>上梁山</title>
   <script src="./plugins/browserdetect.js" type="text/javascript"></script>
   <script src="./plugins/jquery.min.js"></script>
 
-<link href="main.42a5903b.css" rel="stylesheet"></head>
+<link href="main.049cc17b.css" rel="stylesheet"></head>
 <body>
   <div id="app">
     <p style="color: #00aeef;font-size: 30px;margin: 200px auto;text-align: center;">Loading...</p>
@@ -26,5 +27,5 @@
     }
 
   </script>
-<script type="text/javascript" src="manifest.eaa04cb7.js"></script><script type="text/javascript" src="vendors.4cda29af.js"></script><script type="text/javascript" src="main.29f95c76.js"></script></body>
+<script type="text/javascript" src="manifest.99612653.js"></script><script type="text/javascript" src="vendors.e830d94b.js"></script><script type="text/javascript" src="main.6b1e02d2.js"></script></body>
 </html>
